/** @page CHANGES


@section v2_03_dev Changes with libapreq2-2.03-dev


- December 31, 2003 - C API [Swen Schillig, joes]

Fixed bug in calculation of Netscape cookie expiration dates.
apr_time_t is measured in microseconds, not seconds, which
threw off the arithmetic; apr_time_from_sec was needed for
the conversion.

- December 11, 2003 - C API [Max Kellermann]

Fix segfault caused by invalid %-escape sequence in query string.

@section v2_02_dev Changes with libapreq2-2.02-dev

- November 12, 2003 - Perl API [joes]

Fix bogus pool/cookie initializers in Apache::Cookie::set_attr(),
which caused Apache::Cookie::new to segfault.  Bug
first reported to modperl list by Wolfgang Kubens.


@section v2_01_dev Changes with libapreq2-2.01-dev


- November 7, 2003 - build system [joes]

Skip Apache::Test tests in env/ when Apache::Test is unavailable.
This allows the C API to be build and installed without requiring
Apache::Test (it is still a requirement for compiling the perl glue).

- November 7, 2003 - C API mod_apreq.c [joes]

Parser errors were creeping into the return value of apreq_filter,
which breaks the "transparent tee" paradigm.  This caused bogus
"400 Bad Request" responses (first reported by Vladimir Dudo) 
to occur when libapreq2 was used by an output filter during a GET 
request (handled by apache2's default handler).  The test suite 
has been updated accordingly.

- October 26, 2003 - C API [joes]

Incorporate libapreq_cgi into libapreq2 as the default environment,
and add apreq_env_t and initializer apreq_env_module() to manage the
environment at runtime (determining the environment at load-time
was problematic on non-ELF systems).


@section v2_0_0 Changes with libapreq2-2.00-dev


- October 24, 2003 - C API: libapreq_cgi.c [randyk, joes]

CGI environment defined by env/libapreq_cgi.c is functional
(with tests added to env/t).  This library may soon be incorporated
directly into libapreq2 as a default enviroment.
